--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "courseplanner",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^2.2.19",
+    "vite": "^2.6.4"
   }
 }
