--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "framer-motion": "^11.2.11",
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "mysql2": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
