--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.2.11",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "framer-motion": "^11.2.11",
     "mysql2": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^2.2.19",
     "vite": "^2.9.18"
   }
 }
