--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.2.11",
     "mysql2": "^3.10.1",
     "react": "^18.2.0",
