--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@headlessui/react": "^2.1.0",
+    "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "emailjs": "^4.0.3",
@@ -16,6 +18,7 @@
     "mysql2": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4"
   },
