--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emailjs/browser": "^4.3.3",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
+    "@paypal/react-paypal-js": "^8.5.0",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
