--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
     "@paypal/react-paypal-js": "^8.5.0",
+    "@react-oauth/google": "^0.12.2",
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
