--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
